# jit-proxy

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml  on-sdk-update.yml  release.yml
.husky/: pre-commit
deploy-scripts/: build-devnet.sh  deploy-devnet.sh
programs/jit-proxy/: Cargo.toml
programs/jit-proxy/src/: error.rs  lib.rs  state.rs
programs/jit-proxy/src/instructions/: arb_perp.rs  check_order_constraints.rs  jit.rs  mod.rs
python/: README.md  pyproject.toml
python/jit_client/types/: jit_params.py
python/sdk/examples/: shotgun.py  sniper.py
python/sdk/jit_proxy/: jit_proxy_client.py
python/sdk/jit_proxy/jit_client/: program_id.py
python/sdk/jit_proxy/jit_client/errors/: custom.py
python/sdk/jit_proxy/jit_client/instructions/: __init__.py  arb_perp.py  check_order_constraints.py  jit.py
python/sdk/jit_proxy/jit_client/types/: __init__.py  market_type.py  order_constraint.py  post_only_param.py  price_type.py
python/sdk/jit_proxy/jitter/: base_jitter.py  jitter_shotgun.py  jitter_sniper.py
python/sdk/src/: jit_proxy_client.py
python/sdk/src/jitter/: base_jitter.py
python/sdk/tests/: .env  test.py
rust/: .env  Cargo.toml  README.md  run.sh
rust/src/: jit_proxy_client.rs  jitter.rs  lib.rs  main.rs  types.rs
tests/: jit-proxy.ts
ts/sdk/: Readme.md  package.json
ts/sdk/src/: arber.ts  index.ts  jitProxyClient.ts  jitter.ts
ts/sdk/src/jitter/: baseJitter.ts  jitterShotgun.ts  jitterSniper.ts
ts/sdk/src/types/: jit_proxy.ts
