[tool.poetry]
name = "drift_jit_proxy"
version = "0.1.5"
description = "python sdk for drift protocol v2 jit proxy program"
authors = ["Frank <frank@lunoho.company>"]
readme = "README.md"
packages = [
    { include = "jit_proxy", from = "sdk" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
solana = "^0.34.0"
anchorpy = "^0.20.1"
driftpy = "^0.7.52"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 
