[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
dashmap = "5.5.3"
dotenv = "0.15.0"
# drift-rs = { git = "https://github.com/drift-labs/drift-rs", tag = "v1.0.0-alpha.10" }
drift-rs = { path = "../../drift-rs" }
env_logger = "0.10.1"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
solana-sdk = "2"
thiserror = "1.0.40"
tokio = { version = "1.42.0", features = ["full"] }
