[package]
name = "jitter-example"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
dashmap = "6"
drift-rs = { git = "https://github.com/drift-labs/drift-rs", rev = "28a22b" }
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
solana-sdk = "2"
thiserror = "1"
tokio = { version = "1.42.0", features = ["full"] }
